[package]
name = "bevy_marching_cubes"
version = "0.18.1"
edition = "2024"
license = "MIT"
description = "A small Bevy plugin that generates meshes from signed-distance-field (SDF) using the Marching Cubes algorithm"

[features]
default = ["auto_queue"]
auto_queue = []
interpolate_midpoints = []

[dependencies]
bevy = { version = "0.18", default-features = false, features = [
    "bevy_render",
] }
rayon = "1.11.0"
derive_more = "2.1.1"

[dev-dependencies]
bevy = "0.18"
noiz = "0.4.0"
bevy_panorbit_camera = "0.34"
bevy_infinite_grid = "0.18"

[lints.clippy]
too_many_arguments = "allow"
type_complexity = "allow"
